# elastic-glauth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: elasticsearch.rs  main.rs  userdb.rs
