[package]
name = "elastic-glauth"
version = "0.1.0"
edition = "2021"
description = "Generates a glauthd configuration based on elasticsearch user database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["raw_value"] }
similar = "2.5.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
ureq = { version = "2.9.6", features = ["json"] }
