[package]
name = "elastic-glauth"
version = "0.1.6"
edition = "2021"
description = "Generates a glauthd configuration based on elasticsearch user database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
similar = "3.0.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", features = ["json"] }
